--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
-baseURL: http://example.org
+baseURL: /
 languageCode: en-us
-title: My New Hugo Site
+title: Bootstrap Theme Builder
 
 params:
   colors:
